--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,7 @@
   <title>New tab</title>
   <script src="js/fa-kit.js"></script>
   <script src="js/newtab.min.js"></script>
-  <style>
-    
-  </style>
+  <link rel="stylesheet" href="css/newtab.min.css">
 </head>
 
 <body>
